client/src/assets/styles/styles.css
@media screen and (max-width: 760px) { /* mobile */
  .flexbox.wrap-mobile { flex-wrap: wrap; } /* TODO: remove when wa-2.0.css is updated */
}

body.modal {
  overflow: hidden;
}

.text-green {
  color: var(--green);
}

.text-red {
  color: var(--red);
}

.text-blue {
  color: var(--blue);
}

.c-header { position: relative; padding: 0.75rem 1.875rem; }

.c-list { margin-top: 0; }
.c-list .c-item {
  width: 100%;
  cursor: pointer;
  transition: all 0.3s;
  border: none;
}
.c-list .c-item:hover { background: linear-gradient(90deg, rgba(255,255,255,0.0) 0%, var(--background-color-table-row-hover) 15%, var(--background-color-table-row-hover) 100%); }
.c-list .c-item.selected { background: linear-gradient(90deg, rgba(255,255,255,0.0) 0%, var(--background-color-table-row-selected) 15%, var(--background-color-table-row-selected) 100%); }
.c-list .c-item .c-item-border { border-top: 1px solid var(--border-color-soft); padding: 0.8125rem 0; }
.c-list .c-item:first-child .c-item-border { border: none; }
.c-item .userpic .c-category-glyph { color: var(--white); font-size: 1.5rem; padding: 0.75rem; }

.c-transaction-section .c-transaction-section__header {
  margin: 0;
}

.list-enter, .list-leave-to
/* .list-complete-leave-active до версии 2.1.8 */ {
  opacity: 0;
  transform: translateY(30px);
}
.list-leave-active {
  position: absolute;
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.3s;
}
.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0;
}

.fade-appear-enter-active {
  transition: opacity 0.3s;
}
.fade-appear-enter, .fade-appear-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0;
}

.slide-fade-enter-active {
  transition: all 0.2s;
}

.slide-fade-enter,
.slide-fade-leave-to {
  transform: translateX(-50%) translateY(-44%) !important;
  opacity: 0;
}

@media screen and (max-width: 768px) {
  .slide-fade-enter,
  .slide-fade-leave-to {
    transform: translateX(-50%) translateY(0%) !important;
    opacity: 0;
  }
}

.c-sticky-header-group {
  background: var(--background-color-blank);
  margin-right: 0.75rem;
}

.c-sticky-header-group.vue-sticky-el.top-sticky {
  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.1);
}

.c-mobile-build .c-item > .flexbox { padding: 0 0 0 1rem; }
.c-mobile-build .c-item .c-item-amount { padding-right: 1rem; }
.c-mobile-build .c-sticky-header-group > div { padding: 0 1rem; }
.c-mobile-build .c-chart-container { padding: 1rem; }
.c-mobile-build .c-transaction-section .c-transaction-section__header { font-size: 1.25rem; }

